聊天记录扩展表rawMsg字段压缩保存